--- a/site/layouts/partials/buy-button.html
+++ b/site/layouts/partials/buy-button.html
@@ -18,3 +18,7 @@
 >
 Buy {{ .Title }}
 </button>
+
+
+<!-- ЕЩЕ КНОПКА изинетшоп -->
+<a class="btn-ens-action btn-ens-style" data-rel="{{ .Params.rel }}">Купить EASYNETSHOP</a>
